# tinify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  TESTING_GUIDE.md  _typos.toml  cliff.toml  deny.toml  test_cloud_storage.sh
.github/workflows/: ci.yml  release.yml
docs/: cloud_storage_analysis.md  cloud_storage_analysis_cn.md  improved_features.md
docs/spec/: Rust 实现 Tinify API_.md  tinify_rs.md
examples/: 01_compressing_images.rs  02_resizing_images.rs  03_converting_images.rs  04_preserving_metadata.rs  05_saving_to_s3.rs  06_saving_to_gcs.rs  07_error_handling.rs  08_compression_count.rs  09_s3_compatible_storage.rs  10_comprehensive_demo.rs  README.md  improvements_demo.rs  test_gcs_guide.rs  test_real_image.rs  test_s3_minio.rs
scripts/: prepare-release.sh
src/: client.rs  error.rs  lib.rs  options.rs  result.rs  source.rs
src/spec/: Rust 实现 Tinify API_.md
