[package]
name = "tinify-rs"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Tinify API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"
url = "2.5"
